# ltron

./: .gitignore  CONTRIBUTORS  LICENSE  README.md  assets.cfg  notes.txt  pyproject.toml  renderpy_assets.cfg  settings.cfg  setup.cfg  setup.py  setup_off.py
assets/: ltron_logo.mpd
brick_gym/: __init__.py  brick_api.py  brick_viewer.py  config.py  evaluation.py  masks.py  mpd_sequence.py  multiclass.py  snap_manager.py  utils.py  viewpoint_control.py
brick_gym/blender/: blender_export_obj.py  export_obj.py  verify_obj.py
brick_gym/bricks/: brick_color.py  brick_instance.py  brick_scene.py  brick_type.py  snap.py  snap_manager.py
brick_gym/console/: brick_viewer.py  install_ldraw.py  make_dataset_metadata.py  train_graph.py  train_graph_b.py  train_semantic_segmentation.py
brick_gym/dataset/: batch_rollout.py  build_dataset.py  connection2d.py  dataset_stats.py  ldraw_environment.py  metadata.py  old_dataset.py  part_usage.py  paths.py  rando_micro_wheels.py  session_to_generate_data.py  small_vehicles.py  sub_assemblies.py  tiny_turbos.py  tiny_turbos2.py  tiny_turbos3.py
brick_gym/datasets/: ldraw_environment.py  list_paths.py  path_list.py
brick_gym/envs/: __init__.py  brick_env.py  graph_env.py  standard_envs.py  viewpoint_env.py
brick_gym/geometry/: collision.py  collision_sampler.py  grid_bucket.py  scene_sampler.py  utils.py
brick_gym/gym/: brick_env.py  spaces.py  standard_envs.py  viewpoint_env.py
brick_gym/interactive/: greedy.py
brick_gym/ldraw/: colors.py  commands.py  documents.py  ldcad.py  ldraw.py  ldraw_renderpy.py  lego_viewer.py  mpd.py  muru_mpd.py  part.py  paths.py  (+2 more)
data/: ltron_logo.mpd
data_analysis/: Dataset Analysis.ipynb
ltron/: authors.py  compression.py  config.py  constants.py  eval2.py  evaluation.py  exceptions.py  hierarchy.py  home.py  installation.py  license.py  matching.py  name_span.py  pack.py  rollout.py  score.py  settings.py  symmetry.py  utils.py
pytorch/: remap_sum.cpp  setup.py
(+463 files in other folders)
