[metadata]
name = ltron
version = 0.0.3
author = Aaron Walsman
author_email = aaronwalsman@gmail.com
description = Lego interactive machine learning environment.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aaronwalsman/ltron
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = True
packages = find:
python_requires = >= 3.6
install_requires =
    gym
    numpy
    pyquaternion
    gdown
    tqdm
    splendor-render

[options.entry_points]
console_scripts =
    ltron_viewer = ltron.scripts.ltron_viewer:main
    ltron_asset_installer = ltron.scripts.ltron_asset_installer:main
    ltron_make_license = ltron.scripts.ltron_make_license:main
